--- a/Banner.css
+++ b/Banner.css
@@ -1,5 +1,5 @@
 .top-banner {
-  width: 100vw;
+  width: 120%;
   background: #111; /* or use a brand color */
   border: none;
   border-bottom: 1px solid #222; /* subtle divider */
@@ -20,8 +20,8 @@
 .banner-logo {
   height: 64px; /* Adjust as needed */
   display: block;
-  margin-left: 0;
-  margin-right: 50px;
+  margin-left: 0100px;
+  margin-right: 100px;
 }
 
 /* Optional: Make links/text in banner white for contrast */
